--- a/layouts/partials/widgets/events.html
+++ b/layouts/partials/widgets/events.html
@@ -7,24 +7,25 @@
     <li>
         <div class="uk-container">
             <div class="uk-grid uk-grid-small" data-ukgrid>
-                <div class="uk-width-auto sv-event">
-                    <div class="sv-event-content sv-event-date-true">
-                        <div class="sv-event-date">
-                            <span class="sv-event-date-day">
+                <div class="event__item">
+                    <div class="uk-width-auto event">
+                        <div class="event__date--box">
+                            <span class="event__date--day">
                                 {{ dateFormat .Site.Params.time_format_event_daymonth .Date }}</span>
-                            <span class="sv-event-date-year">
+                            <span class="event__date--year">
                                 {{ dateFormat .Site.Params.time_format_event_year .Date }}</span>
                         </div>
                     </div>
-                </div>
-                <div class="uk-width-expand">
-                    <p><a href="{{.RelPermalink}}">{{.Title}}</a></p>
-                    {{ if eq .Params.status "active" }}
-                    <p>{{ partial "functions/event_anne_link" (dict "id" .Params.anne_id "link" "Anmeldung") }}</p>
-                    {{ end }}
+                    <div class="uk-width-expand">
+                        <p><a href="{{.RelPermalink}}">{{.Title}}</a></p>
+                        {{ if eq .Params.status "active" }}
+                        <p>{{ partial "functions/event_anne_link" (dict "id" .Params.anne_id "link" "Anmeldung") }}</p>
+                        {{ end }}
+                    </div>
                 </div>
             </div>
         </div>
     </li>
     {{ end }}
 </ul>
+<a href="/termine">... weitere Termine</a>
