Change header and menu.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
   <body>
     <div class="uk-offcanvas-content">
       {{ partial "header" . }}
+      {{ partial "navigation" . }}
       {{ block "main" . }}{{ end }}
       {{ partial "footer" . }}
     </div>
