New fixed toTop button.

--- a/static/css/additional.css
+++ b/static/css/additional.css
@@ -13,6 +13,26 @@
   background: #9b0913
 }
 
+.uk-totop {
+  padding: 15px 20px;
+  background: #eee;
+  border-radius: 8px 8px 0 0;
+  transition: background ease 250ms;
+}
+
+.uk-totop:hover {
+  background: ghostwhite;
+}  
+
+.uk-totop svg {
+  color: #000;
+  transition: background ease 250ms;
+}
+
+.uk-totop:hover svg {
+  color: blue;
+ }
+
 /* styles for upcomming events */
 .event__item {
   position: relative;
