--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,8 @@
+<a href="#" uk-totop uk-scroll class="uk-position-fixed uk-position-bottom-right"></a>
 <footer id="footer" class="uk-section uk-section-secondary uk-section-small">
   <div class="uk-container">
     <div class="uk-grid uk-grid-large" uk-grid>
       <div class="uk-text-small uk-text-center uk-width-expand">© {{ now.Year }} {{ .Site.Copyright | markdownify }}</div>
-      <div id="toTop">
-        <a href="#" uk-totop uk-scroll></a>
-      </div>
       <div class="uk-text-right">
         {{ with .Site.Data.l10n.articles.last_modified }} {{ . }} {{ end }}{{ dateFormat .Site.Params.time_format_last_mod .Lastmod }}
       </div>
