Change navigation and news background.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <header id="header">
-  <div class="uk-container uk-container-expanded">
+  <div class="uk-container">
     <div class="uk-flex">
       <!-- logo -->
       <div class="uk-flex-none">
