--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-<div class="uk-section uk-section-default uk-section-xsmall">
+<div class="uk-section uk-section-default uk-section-xsmall uk-section-primary uk-dark">
 	<div class="uk-container">
 		<h4 class="uk-heading-line uk-text-bold"><span>{{ with .Site.Data.l10n.articles.hero }} {{ . }} {{ end }}</span></h4>
 		<div data-uk-slider="velocity: 5">
