--- a/layouts/partials/event_resources_list.html
+++ b/layouts/partials/event_resources_list.html
@@ -1,17 +1,61 @@
+{{ $ctx := .ctx}}
+{{ $outputs := .outputs }}
+{{ $resuSet := false }}
+{{ $sBrowserSet := false }}
+{{ $createSBLink := false }}
+{{ $createResuLink := false }}
+{{ range $outputs }}
+    {{ if eq .Name "splitsbrowser" }}
+        {{ $createSBLink = true }}
+    {{ end }}
+    {{ if eq .Name "result" }}
+        {{ $createResuLink = true }}
+    {{ end }}
+{{ end }}
+
 <ul class="uk-list">
-    {{ range . }}
-    <li>
+    {{ range $ctx }}
         {{ if (intersect .MediaType.Suffixes (slice "pdf")) }}
-        <span style="color: rgb(253, 60, 25);">
-            <i class="far fa-file-pdf"></i>
-        </span>
+        <li>
+            <span style="color: rgb(253, 60, 25);">
+                <i class="far fa-file-pdf"></i>
+                <a href="{{ .RelPermalink }}">{{ .Title | default .Name }}</a>
+            </span>
+        </li>
+        {{ end }}
+        {{ if eq $createResuLink true }}
+        {{ if eq .ResourceType "json" }}
+        {{ if eq $resuSet false }}
+        <li>
+            <span style="color: rgb(63, 194, 81);">
+                <i class="fa fa-hand-pointer"></i>
+                <a href="./resu.html">Ergebnis</a>
+            </span>
+            {{ $resuSet = true }}
+        </li>
+        {{ end }}
+        {{ end }}
+        {{ end }}
+        {{ if eq $createSBLink true }}
+        {{ if eq .ResourceType "xml" }}
+        {{ if eq $sBrowserSet false }}
+        <li>
+            <span style="color: rgb(63, 194, 81);">
+                <i class="fa fa-hand-pointer"></i>
+                <a href="./splitsbrowser.html">SplitsBrowser</a>
+            </span>
+            {{ $sBrowserSet = true }}
+        </li>
+        {{ end }}
+        {{ end }}
         {{ end }}
         {{ if eq .ResourceType "" }}
-        <span style="color: rgb(136, 118, 115);">
-            <i class="fa fa-file"></i>
-        </span>
+        <li>
+            <span style="color: rgb(136, 118, 115);">
+                <i class="fa fa-file"></i>
+                <a href="{{ .RelPermalink }}">{{ .Title | default .Name }}</a>
+            </span>
+        </li>
         {{ end }}
-        <a href="{{ .RelPermalink }}">{{ .Title | default .Name }}</a>
-    </li>
     {{ end }}
 </ul>
