--- a/layouts/partials/functions/get_folder_info.html
+++ b/layouts/partials/functions/get_folder_info.html
@@ -1,5 +1,5 @@
 {{ $t := .Title }}
-{{ with $x := split (path.Dir .Dir) "/" }}
+{{ with $x := split (path.Dir .File.Dir) "/" }}
     {{ $cType := index $x 0 }}
     {{ if eq $cType "pressinfo" }}
         {{ with $y := index $x 1 }}
