--- a/layouts/partials/event_resources_list_flat.html
+++ b/layouts/partials/event_resources_list_flat.html
@@ -46,6 +46,15 @@
         {{ end }}
     {{ end }}
     {{ end }}
+    {{ if eq .ResourceType "image" }}
+    <li>
+        <span style="color: rgb(223, 39, 7);">
+            <i class="fa fa-image"></i>
+            <a href="{{ .RelPermalink }}">{{ .Title | default .Name }}</a>
+            {{ if (lt (add $index 1) $len) }}&bull;{{ end }}
+        </span>
+    </li>
+    {{ end }}
     {{ if eq $element.ResourceType "" }}
         <span style="color: rgb(136, 118, 115);">
             <i class="fa fa-file"></i>
