--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-{{ partial "hero" . }}
+{{ if $.Site.Params.show_hero }}
+  {{ partial "hero" . }}
+{{ end }}
 <div class="uk-section uk-section-default uk-section-xsmall">
   <div class="uk-container">
     <div class="uk-grid" data-ukgrid>
