--- a/layouts/partials/event_list_meta.html
+++ b/layouts/partials/event_list_meta.html
@@ -1,10 +1,5 @@
-    <div class="uk-article-meta">
-        <div>
-            <span uk-icon="icon:location"></span>
-            {{ partial "functions/map_link" (dict "ctx" .Params.meeting "txt" .Params.event.location) }}
-            {{ with .Params.implementation }}
-                &bull;
-                {{.}}
-            {{ end }}
-        </div>
-    </div>
+<div class="uk-article-meta">
+    <span uk-icon="icon:location"></span>
+    {{- partial "functions/map_link" (dict "ctx" .Params.meeting "txt" .Params.event.location) -}}
+    {{- with .Params.implementation -}} &bull; {{.}}{{- end -}}
+</div>
