--- a/layouts/shortcodes/cupsTable.html
+++ b/layouts/shortcodes/cupsTable.html
@@ -15,10 +15,16 @@
                 <ul class="uk-list uk-list-bullet">
                 {{ range $c.cup }}
                  {{ $n := . }}
+                    {{ if (hasPrefix $n.link "/") }}
+                    <li>
+                        <a href="{{ $n.link | absURL }}"><b>{{$n.text}}</b>
+                    </li>
+                    {{ else }}
                     {{ $url := print "/event/" $c.year "/" $n.link }}
                     <li>
-                    <a href="{{ $url | relURL }}"><b>{{$n.text}}</b>
+                        <a href="{{ $url | relURL }}"><b>{{$n.text}}</b>
                     </li>
+                    {{ end }}
                  {{ end }}
                 </ul>
             </td>
