Change #Mitglieder to #Aktive.

--- a/layouts/shortcodes/clubTable.html
+++ b/layouts/shortcodes/clubTable.html
@@ -4,7 +4,7 @@
             <th>Verein</th>
             <th/>
             <th>Obmann/Stellvertreter</th>
-            <th># Mitglieder</th>
+            <th># Aktive</th>
         </tr>
     </thead>
     <tbody>
