--- a/layouts/partials/event_entry.html
+++ b/layouts/partials/event_entry.html
@@ -3,8 +3,7 @@ Anmeldung bis spätestens <b>
         {{ $mtime := time .Date }}
         {{ $duration := time.Duration "hour" (mul .Params.entry.closing_date_days 24) }}
         {{ $mtime2 := $mtime.Add ($duration) }}
-        {{ $mtime2.Day }}. {{ index $.Site.Data.months (printf "%d" $mtime2.Month) }} {{ $mtime2.Year }}</span>
-
+        <span>{{ $mtime2.Day }}. {{ index $.Site.Data.months (printf "%d" $mtime2.Month) }} {{ $mtime2.Year }}</span>
     </b> über {{ partial "functions/event_anne_link" (dict "id" .Params.anne_id "link" "ANNE") }}.
 {{ end }}
 {{ if not (eq .Params.entry.email "") }}
