--- a/layouts/partials/event_list_upcomming.html
+++ b/layouts/partials/event_list_upcomming.html
@@ -1,6 +1,59 @@
 {{ $evt := where .Site.RegularPages "Type" "event" }}
 {{ $evt = $evt | intersect (where .Site.Pages ".Params.status" "in" (slice "planned" "active")) }}
 {{ $evt = sort $evt "Date" "asc" }}
+<script type="text/javascript">
+function setClipboardText(text) {
+    var id = "mycustom-clipboard-textarea-hidden-id";
+    var existsTextarea = document.getElementById(id);
+
+    if(!existsTextarea){
+        var textarea = document.createElement("textarea");
+        textarea.id = id;
+
+        // Place in top-left corner of screen regardless of scroll position.
+        textarea.style.position = 'fixed';
+        textarea.style.top = 0;
+        textarea.style.left = 0;
+
+        // Ensure it has a small width and height. Setting to 1px / 1em
+        // doesn't work as this gives a negative w/h on some browsers.
+        textarea.style.width = '1px';
+        textarea.style.height = '1px';
+
+        // We don't need padding, reducing the size if it does flash render.
+        textarea.style.padding = 0;
+
+        // Clean up any borders.
+        textarea.style.border = 'none';
+        textarea.style.outline = 'none';
+        textarea.style.boxShadow = 'none';
+
+        // Avoid flash of white box if rendered for any reason.
+        textarea.style.background = 'transparent';
+        document.querySelector("body").appendChild(textarea);
+
+        existsTextarea = document.getElementById(id);
+    }
+
+    existsTextarea.value = text;
+    existsTextarea.select();
+
+    document.execCommand('copy');
+}
+</script>
+<div class="uk-flex uk-flex-center uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-1@s">
+    <a class="uk-button uk-button-default"
+       href="{{ "event/index.ics" | absURL}}"
+       uk-tooltip="Das iCal Format kann in alle gängigen Kalender importiert werden.">
+        <i class="far fa-calendar"></i> iCal herunterladen
+    </a>
+    <button class="uk-button uk-button-default"
+            onclick="setClipboardText('{{"event/index.ics" | absURL}}')"
+            uk-tooltip="Wenn die Möglichkeit besteht per URL einen Kalender zu abonieren diesen Link verwenden.">
+        <i class="fas fa-link"></i> Link kopieren
+    </button>
+</div>
+
 <ul class="uk-list uk-list-divider">
     {{ range $evt }}
     <li>
