--- a/layouts/event/card_content.html
+++ b/layouts/event/card_content.html
@@ -1,5 +1,10 @@
 <div class="uk-card-body">
     <div class="uk-grid uk-grid-medium uk-flex uk-flex-middle" data-uk-grid>
+        {{ if eq .Params.status "canceled" }}
+        <div>
+            <span class="uk-label uk-label-danger">{{with .Site.Data.l10n.eventstatus.canceled}}{{.}}{{end}}</span>
+        </div>
+        {{ else }}
         <div class="uk-width-1-5@m uk-height-1-1 uk-visible@m">
             {{ if eq .Params.event.type "schcup" }}
             <div class="uk-card-media">
@@ -27,6 +32,7 @@
             </div>
             {{ end }}
         </div>
+        {{ end }}
         <div class="uk-width-4-5@m uk-height-1-1">
             <div class="uk-container">
                 <h5 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold">
