--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,9 @@
         {{ $archive2017 := $taxonomy.Pages }}
         {{ $taxonomy := index .Site.Taxonomies.archives "2018" }}
         {{ $archive2018 := $taxonomy.Pages }}
-        {{ $archive := $archive2017 | union $archive2018 }}
+        {{ $taxonomy := index .Site.Taxonomies.archives "2019" }}
+        {{ $archive2019 := $taxonomy.Pages }}
+        {{ $archive := $archive2017 | union $archive2018 | union $archive2019 }}
 
         {{ $blog = $blog | complement $archive }}
         {{ $paginator := .Paginate $blog }}
