--- a/layouts/event/card_content.html
+++ b/layouts/event/card_content.html
@@ -46,6 +46,7 @@
                     {{ $outputs := .OutputFormats }}
                     {{ $infolinks := .Params.resource_links.infos }}
                     {{ $resulinks := .Params.resource_links.results }}
+                    {{ $isActive := eq .Params.status "active" }}
                     <div>
                     {{ with .Resources.Match "infos/*" }}
                         {{ partial "event_resources_list_flat" (dict "ctx" . "outputs" $outputs "links" $infolinks) }}
@@ -53,9 +54,13 @@
                     {{ end }}
                     </div>
                     <div>
-                    {{ with .Resources.Match "results/*" }}
-                        {{ partial "event_resources_list_flat" (dict "ctx" . "outputs" $outputs "links" $resulinks) }}
-                    {{ end }}
+                        {{ if ($isActive) }}
+                            {{ partial "functions/event_liveresult_link" (dict "id" .Params.liveresultat_id) }}
+                        {{ end }}
+                        
+                        {{ with .Resources.Match "results/*" }}
+                            {{ partial "event_resources_list_flat" (dict "ctx" . "outputs" $outputs "links" $resulinks) }}
+                        {{ end }}
                     </div>
                 </div>
             </div>
