--- a/layouts/shortcodes/champions.html
+++ b/layouts/shortcodes/champions.html
@@ -7,8 +7,18 @@
             <li data-uk-filter-control=".sprint-card"><a href="#">Sprint</a></li>
             <li data-uk-filter-control=".regular-card"><a href="#">Allgemein</a></li>
             <li data-uk-filter-control=".junsen-card"><a href="#">Junioren/Senioren</a></li>
+            <li>
+                <a href="#">Jahr <span uk-icon="icon:  triangle-down"></span></a>
+                <div uk-dropdown="mode: click;">
+                    <ul class="uk-nav uk-dropdown-nav">
+                        {{ $currentYear := now.Year }}
+                        {{ range (seq 2016 $currentYear) }}
+                        <li data-uk-filter-control=".card{{.}}"><a href="#">{{.}}</a></li>
+                        {{ end }}
+                    </ul>
+                </div>
+            </li>
         </ul>
-
 
         <div class="uk-grid uk-grid-medium uk-child-width-1-1@s uk-child-width-1-2@m uk-child-width-1-3@l uk-grid-match js-filter"
             data-uk-grid="masonry: true">
@@ -19,7 +29,7 @@
             {{ $n := .name }}
 
             {{ if gt $y "2015"}}
-            <div class="{{$t}}-card">
+            <div class="{{$t}}-card card{{$y}}">
                 <div class="uk-card uk__card--blog uk-card-small uk-card-default">
                     <div class="uk-card-header">
                         <div class="uk-grid uk-grid-small uk-text-small" data-uk-grid>
