--- a/layouts/partials/event_table.html
+++ b/layouts/partials/event_table.html
@@ -33,12 +33,14 @@
         </tr>
         {{ end }}
         <tr><td>Wettkampfart</td><td>{{ .Params.event.form }}</td></tr>
+        {{ if not (eq .Params.official.event "") }}
         <tr><td>Wettkampfleiter</td><td>{{ .Params.official.event }}</td></tr>
+        {{ end }}
         <tr><td>Bahnleger</td><td>{{ .Params.official.course }}</td></tr>
         {{ if not (eq .Params.official.inspection "") }}
         <tr><td>Kontrolle</td><td>{{ .Params.official.inspection }}</td></tr>
         {{ end }}
-        {{ if eq .Params.event.type "sbgcup" }}
+        {{ if or (eq .Params.event.type "sbgcup") (eq .Params.event.type "trgcup") }}
         <tr><td>Karte</td><td>{{ .Params.map.name }} / M {{ .Params.map.scale }} / AE {{ .Params.map.equidistance }} / Stand {{ .Params.map.update }}{{if not (eq .Params.map.format "")}} / {{.Params.map.format}} {{end}}{{if not (eq .Params.map.hints "")}} / {{.Params.map.hints}} {{end}}</td></tr>
         <tr><td>Postenbeschreibung</td><td>{{ .Params.control_point_description }}</td></tr>
         <tr>
