--- a/layouts/event/card_content.html
+++ b/layouts/event/card_content.html
@@ -52,10 +52,18 @@
                     {{ $outputs := .OutputFormats }}
                     {{ $infolinks := .Params.resource_links.infos }}
                     {{ $resulinks := .Params.resource_links.results }}
+                    {{ $anneId := .Params.anne_id | default 0 }}
                     {{ $isActive := eq .Params.status "active" }}
                     {{ $isDone := eq .Params.status "done" }}
                     <div>
+                        {{ if gt $anneId 0 }}
+                            <span style="color: rgb(48, 115, 179);">
+                                <i class="fas fa-link"></i>
+                                <a href="http://www.oefol.at/anne?p=1&q=3&id={{$anneId}}">Veranstaltungsdetails</a>
+                            </span>
+                        {{ end }}
                     {{ with .Resources.Match "infos/*" }}
+                        {{ if gt $anneId 0 }}&bull;{{ end }}
                         {{ partial "event_resources_list_flat" (dict "ctx" . "outputs" $outputs "links" $infolinks) }}
                         <hr class="uk-divider-small">
                     {{ end }}
