--- a/layouts/partials/event_resources.html
+++ b/layouts/partials/event_resources.html
@@ -1,11 +1,20 @@
 {{ $outputs := .OutputFormats }}
 {{ $infolinks := .Params.resource_links.infos }}
 {{ $resulinks := .Params.resource_links.results }}
+{{ $anneId := .Params.anne_id | default 0 }}
+
 {{ $isActive := eq .Params.status "active" }}
 {{ $isDone := eq .Params.status "done" }}
 <div>
-  {{ with .Resources.Match "infos/*" }}
+  {{ if gt $anneId 0 }}
     <h4 class="uk-heading-line uk-text-bold"><span>Infos</span></h4>
+    <span style="color: rgb(48, 115, 179);">
+      <i class="fas fa-link"></i>
+      <a href="http://www.oefol.at/anne?p=1&q=3&id={{$anneId}}">Veranstaltungsdetails</a>
+    </span>
+  {{ end }}
+  {{ with .Resources.Match "infos/*" }}
+    {{ if eq $anneId 0 }}<h4 class="uk-heading-line uk-text-bold"><span>Infos</span></h4>{{ end }}
     {{ partial "event_resources_list" (dict "ctx" . "outputs" $outputs "links" $infolinks) }}
   {{ end }}
   
