--- a/layouts/partials/event_resources_list.html
+++ b/layouts/partials/event_resources_list.html
@@ -38,7 +38,7 @@
         {{ end }}
         {{ end }}
         {{ if eq $createSBLink true }}
-        {{ if eq .ResourceType "xml" }}
+        {{ if (intersect .MediaType.Suffixes (slice "xml")) }}
         {{ if eq $sBrowserSet false }}
         <li>
             <span style="color: rgb(63, 194, 81);">
