--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,18 @@
     {{ with .Site.Home.OutputFormats.Get "RSS" -}}
     <link rel="{{ .Rel }}" href="{{ .Permalink }}" type="application/rss+xml" title="SOLV Blog Feed" />
     {{ end  }}
-    <!-- TODO: only add when needed (for map page) -->
-    <!-- <script src="http://maps.google.com/maps/api/js?sensor=false"></script> -->
+    <!-- TODO: only add when needed (i.e. for map page) -->
+    {{ if isset .Params "add_scripts" }}
+        {{ if eq .Params.add_scripts "leaflet" }}
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+            <link rel="stylesheet" href="{{ "css/maps.css" | relURL }}" />
+            <!-- Make sure you put this AFTER Leaflet's CSS -->
+            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js" integrity="sha512-1Gn7//DzfuF67BGkg97Oc6jPN6hqxuZXnaTpC9P5uw8C6W4yUNj5hoS/APga4g1nO2X6USBb/rXtGzADdaVDeA==" crossorigin="anonymous"></script>
+            <script type="text/javascript" charset="utf-8" src="{{ "js/maps.js" | relURL }}"></script>
+        {{ end }}
+        {{ if eq .Params.add_scripts "google" }}
+            <!-- <script src="http://maps.google.com/maps/api/js?sensor=false"></script> -->
+        {{ end }}
+    {{ end }}
 </head>
