add turf to calculate geojson area

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,6 +28,7 @@
             <link rel="stylesheet" href="{{ "css/maps.css" | relURL }}" />
             <!-- Make sure you put this AFTER Leaflet's CSS -->
             <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+            <script src='https://unpkg.com/@turf/turf@6.3.0/turf.min.js'></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js" integrity="sha512-1Gn7//DzfuF67BGkg97Oc6jPN6hqxuZXnaTpC9P5uw8C6W4yUNj5hoS/APga4g1nO2X6USBb/rXtGzADdaVDeA==" crossorigin="anonymous"></script>
             <script type="text/javascript" charset="utf-8" src="{{ "js/maps.js" | relURL }}"></script>
         {{ end }}
